fix: left align price on product page

--- a/assets/customizations.css
+++ b/assets/customizations.css
@@ -46,8 +46,14 @@ product-info .giveaway-entries h3 button {
 .product .price {
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
   flex-wrap: wrap;
+}
+
+.product .price {
+  justify-content: space-between;
+}
+
+.card-information .price {
   justify-content: center;
 }
 
